# spis-20-MLProject-Raul-Vedant

./: main.py  pyproject.toml
data/: CSGO.txt  Civ_VI.txt  DOTA_2.txt  Destiny2.txt  FM_2020.txt  GTA_V.txt  Garry's_Mod.txt  PUBG.txt  RainbowSixSiege.txt  Rocket_League.txt  TF2.txt  Warframe.txt
